--- a/index.html
+++ b/index.html
@@ -1,43 +1,12 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>JavaScript Introduction</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #e0f7fa;
-            text-align: center;
-            padding: 50px;
-        }
-
-        h1 {
-            color: #00796b;
-        }
-
-        p {
-            font-size: 18px;
-            color: #333;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
-
 <body>
-    <h1>Welcome</h1>
-
-    <h1>Introduction to JavaScript</h1>
-    <p>JavaScript is a powerful scripting language used to make web pages interactive. It allows you to create alerts,
-        handle user input, and build dynamic web applications.</p>
-    <script>
-        alert("Error! Please enter a valid password.");
-        alert("Welcome to JS Land...\nHappy Coding!");
-        alert("Welcome to JS Land...");
-        alert("Happy Coding!");
-        alert("Hello! I can run JS through my web browser’s console.");
-   
-    </script>
-
+    
 </body>
-
+<script src="app.js"></script>
 </html>
